--- a/assets/scss/section/_feed.scss
+++ b/assets/scss/section/_feed.scss
@@ -1,6 +1,6 @@
 .feed {
     padding: 40px 0px;
-
+    padding-top: 20px;
     .card-box {
         height: 450px;
         max-height: 100%;
