--- a/assets/scss/section/_notes.scss
+++ b/assets/scss/section/_notes.scss
@@ -1,7 +1,22 @@
 .notes {
+    padding-bottom: 0px !important;
+    &__items {
+        position: relative;
+        &::-webkit-scrollbar-track {
+            // height: 10px;
+            background-color: red;
+        }
+    }
+
+    &__item {
+        margin-right: 15px;
+    }
+
     &__title {
         font-size: 16px;
         line-height: 21px;
+        margin-bottom: 15px;
+        margin-left: 15px;
     }
     &__day {
         h5 {
@@ -35,12 +50,28 @@
     }
 
     &__card {
+        width: 250px;
+        height: 250px;
+        overflow-y: hidden;
         .rAbs {
-            position: absolute;
-            bottom: 15px;
-            left: 20px;
             font-size: 12px;
             line-height: 16px;
         }
     }
+}
+
+.link__wrapper {
+    display: flex;
+    flex-direction: column;
+    a {
+        margin-bottom: 5px;
+    }
+}
+main::-webkit-scrollbar {
+    width: 25px;
+    height: 5px;
+}
+
+main::-webkit-scrollbar-track {
+    border: 2px solid #f4f2f2;
 }
