--- a/assets/scss/utility/_reset.scss
+++ b/assets/scss/utility/_reset.scss
@@ -77,6 +77,13 @@ abbr[title] {
 body {
     font-family: BRegular;
 }
+body::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+body::-webkit-scrollbar-thumb {
+    background-color: darkgrey;
+    outline: 1px solid slategrey;
+}
 
 main {
     background-color: #f2f3f4;
